--- a/src/style1.css
+++ b/src/style1.css
@@ -220,3 +220,28 @@ footer {
 #search-form button:hover i {
     transform: translateX(2px);
 }
+@media screen and (max-width: 1348px) {
+    header ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    header ul li {
+        list-style: none;
+        margin-left: 20px;
+    }
+    header ul li a {
+        text-decoration: none;
+        padding: 6px 15px;
+        color: #000000;
+        border-radius: 20px;
+    }
+    header ul li a:hover,
+    header ul li a.active {
+        background: #fff;
+        color: #2b1055;
+    }
+    #sec2 {
+        transform: translateX(-90px);
+    }
+}
