Added the readme file

--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,7 @@ body{
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background-color: grey;
     background: url('/assets/login.jpg') no-repeat ;
     background-size: cover;
     background-position: center;
